# RAS-SES-598-Space-Robotics-and-AI

assignments/Photogrammetry and Gaussian Splatting on Lunar Apollo 17 imagery/: readme.md
assignments/cart_pole_optimal_control/: README.md  setup.py
assignments/cart_pole_optimal_control/cart_pole_optimal_control/: DQN Training.py  DQN Training.txt  comparision file.py  comparision file_graph.txt  dqn_cart_pole.pth  dqn_controller.py  dqn_controller.txt  lqr.txt  lqr_controller.py  training_results.txt
assignments/cart_pole_optimal_control/cart_pole_optimal_control/dqn_controller learning to stabilize_files/: 5MFOoSZqmrG.js  7K6A8X1Bvwd.js  GraxwcY9v_IkWv96EidCuHrJ78-CBA_c57Heh5eE9q-5V7f1l9dlh7nvsWqehdEtWw.js  OPahVpxLYsK.js  file(1).enc  file(10).enc  file(11).enc  file(12).enc  file(13).enc  file(2).enc  file(3).enc  file(4).enc  file(5).enc  file(6).enc  file(7).enc  file(8).enc  (+2 more)
assignments/cart_pole_optimal_control/launch/: cart_pole.launch.py  cart_pole_rviz.launch.py
assignments/first_order_boustrophedon_navigator/: CMakeLists.txt  README.md  package.xml
assignments/first_order_boustrophedon_navigator/first_order_boustrophedon_navigator/: boustrophedon_controller.py
assignments/first_order_boustrophedon_navigator/msg/: PerformanceMetrics.msg
assignments/terrain_mapping_drone_control/: CMakeLists.txt  README.md
assignments/terrain_mapping_drone_control/launch/: new_launch.py
assignments/terrain_mapping_drone_control/terrain_mapping_drone_control/: Estimation_cyclinder.py  aruco_tracker.py  cylinder_landing_node.py  mission.py  spiral_trajectory.py
(+6 files in other folders)
